Controller test
file 저장, 브랜드, 카테고리DB에 있는지 확인